--- a/Blog.html
+++ b/Blog.html
@@ -66,7 +66,7 @@
                                     <li class="dropdown-header">Communication</li>
                                     <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
                                     <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
-                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="vXj4ufVF42M" href="#">Solar winds</a></li>
                                     <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
                                     <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
                                 </ul>
@@ -82,7 +82,7 @@
                                     <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
                                     <li><a href="./Products/Sophos.html">Sophos</a></li>
                                     <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
-                                    <li><a href="./Products/veeam.html">Veeam</a></li>
+                                    <li><a href="./Products/Veeam.html">Veeam</a></li>
                                     <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
                                 </ul>
                                 <ul class="col-sm-3">
@@ -90,7 +90,7 @@
                                     <li><a href="./Products/Sophos.html">Sophos</a></li>
                                     <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
                                     <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
-                                    <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="uIKE6PCCeS8" href="#">Solar winds</a></li>
                                     <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
                                     <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
                                     <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
