--- a/Products/Sophos.html
+++ b/Products/Sophos.html
@@ -19,151 +19,6 @@
     <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" href="../img/ikasi_logo.png" type="image/x-icon">
 
-<style>
-    body,
-      h1,
-      p,
-      ul,
-      li {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        font-family: Arial, sans-serif;
-      }
-
-      main {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 1px;
-      }
-
-      .prod-intro {
-        width: 100%;
-        text-align: center;
-        padding: 20px;
-        background-color: #ffffff;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
-      }
-
-      .prod-intro h1 {
-        padding: 1%;
-      }
-
-      .prod-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        height: 35%;
-        padding-left: 10px;
-      }
-
-      .prod-card {
-        background-color: #fff;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
-        width: calc(30% - 20px);
-        text-align: center;
-        transition: all 0.3s ease;
-        box-sizing: border-box;
-        height: 300px;
-      }
-
-      .prod-card img {
-        border-radius: 10px 10px 0 0;
-        max-width: 100%;
-        height: auto;
-      }
-
-      .prod-card h2 {
-        color: #3cba54;
-        font-size: 1.5em;
-        margin: 15px 0 10px;
-      }
-
-      .prod-card p {
-        color: #555;
-        font-size: 1em;
-      }
-
-      .prod-card:hover {
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        transform: translateY(-5px);
-      }
-
-      .prod-card .prod-popup-text {
-        visibility: hidden;
-        position: absolute;
-        bottom: 100%;
-        left: 50%;
-        transform: translateX(-50%);
-        background-color: rgba(0, 0, 0, 0.8);
-        color: #fff;
-        padding: 10px;
-        border-radius: 5px;
-        font-size: 0.9em;
-        width: 200px;
-        text-align: center;
-        transition: visibility 0.3s ease;
-      }
-
-      .prod-card:hover .prod-popup-text {
-        visibility: visible;
-      }
-
-      .prod-quick-links {
-        width: 20%;
-        background-color: #ffffff;
-        padding: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      }
-
-      aside.prod-quick-links h2 {
-        font-size: 1.5em;
-        margin-bottom: 20px;
-        color: #3cba54;
-      }
-
-      aside.prod-quick-links ul {
-        list-style: none;
-      }
-
-      aside.prod-quick-links ul li {
-        margin-bottom: 10px;
-      }
-
-      aside.prod-quick-links ul li a {
-        color: #3cba54;
-        text-decoration: none;
-        font-size: 1.1em;
-      }
-
-      aside.prod-quick-links ul li a:hover {
-        text-decoration: underline;
-      }
-
-      @media (max-width: 768px) {
-        .prod-container {
-          width: 100%;
-        }
-        .prod-card {
-          width: calc(100% - 20px);
-        }
-        .prod-quick-links {
-          width: 100%;
-        }
-      }
-
-      #prod-Illustration {
-        height: 42%;
-        width: 46%;
-        padding: 2%;
-      }
-    
-    </style>
-
 </head>
 <body>
 <div id="main-wrapper">
@@ -205,44 +60,46 @@
               <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown"
                       class="dropdown-toggle">Vendors
                       <span><i class="fa fa-angle-down"></i></span></a>
-                  <ul class="dropdown-menu">
-                      <li>
-                          <div class="m-menu-content">
-                              <ul class="col-sm-3">
-                                  <li class="dropdown-header">Communication</li>
-                                  <li><a class="popup-link" data-video-id="gRNPzs25pSY" href="#">Dell technologies</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                              </ul>
-                              <ul class="col-sm-3">
-                                  <li class="dropdown-header">Cloud</li>
-                                  <li><a class="popup-link" data-video-id="" href="#">SYNAQ</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Adobe</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Microsoft Office 365</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                              </ul>
-                              <ul class="col-sm-3">
-                                  <li class="dropdown-header">Security</li>
-                                  <li><a href="./Kaspersky.html">Kaspersky</a></li>
-                                  <li><a href="./Sophos.html">Sophos</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">CheckPoint</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Veeam</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                              </ul>
-                              <ul class="col-sm-3">
-                                  <li class="dropdown-header">Networking</li>
-                                  <li><a href="./Sophos.html">Sophos</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Cisco</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
-                                  <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
-                              </ul>
-                          </div>
-                      </li>
-                  </ul>
+                      <ul class="dropdown-menu">
+                        <li>
+                            <div class="m-menu-content">
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Communication</li>
+                                    <li><a class="popup-link" data-video-id="idHPbgMpdKo" href="#">Dell technologies</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                    <li><a class="popup-link" data-video-id="vXj4ufVF42M" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Cloud</li>
+                                    <li><a class="popup-link" data-video-id="4kuznHDHb5o" href="#">SYNAQ</a></li>
+                                    <li><a class="popup-link" data-video-id="b7ZC01afWPw" href="#">Adobe</a></li>
+                                    <li><a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#">Microsoft Office 365</a></li>
+                                    <li><a class="popup-link" data-video-id="UdQQNiQUzbE" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Security</li>
+                                    <li><a href="Kaspersky.html">Kaspersky</a></li>
+                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
+                                    <li><a href="Veeam.html">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
+                                </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Networking</li>
+                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
+                                    <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
+                                    <li><a class="popup-link" data-video-id="uIKE6PCCeS8" href="#">Solar winds</a></li>
+                                    <li><a class="popup-link" data-video-id="iV0CwoCJBno" href="#">Huawei</a></li>
+                                    <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                                    <li><a class="popup-link" data-video-id="hpHkLLmkD_o" href="#">Manage Engine</a></li>
+                                    <li><a class="popup-link" data-video-id="Wporyr3hr68" href="#">Hewlett Packard Enterprise</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
               </li>
 
           </ul>
