--- a/Products/Veeam.html
+++ b/Products/Veeam.html
@@ -42,11 +42,10 @@
         <ul class="breadcrumb">
             <li><a href="../index.html">Home</a></li>
             <li>Products</li>
-            <li>Veeam</li>
+            <li><a href="Veeam.html">Veeam</a></li>
           </ul>
-        <!-- .container -->
-    <!-- .nav -->
-    <section class="about-text ptb-100">
+    
+    <section>
         <section class="section-title">
             <div class="veeam-page">
                 <iframe title = "Ikasisolutions Veeam Syndication page" src="https://wcs-veeamproducts-ikasisolutions.swcontentsyndication.com/VeeamProduct-Homepage-EN" style="height: 3000px; width: 100%; border: none;"></iframe>   
@@ -158,11 +157,8 @@
     
     </div>
     <!-- .content-wrapper -->
-    </div>
-    <!-- .offcanvas-pusher -->
- 
 </div>
-<!-- #main-wrapper -->
+    <!-- .offcanvas-pusher -->
 
 <!-- Script -->
 <script src="../js/jquery-2.1.4.min.js"></script>
