--- a/Mobileproducts.html
+++ b/Mobileproducts.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ikasi Solution | Sophos Products</title>
+    <title>Ikasi Solution | Partners</title>
     <!-- web-fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,500" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <!-- off-canvas -->
-    <link href="../css/mobile-menu.css" rel="stylesheet">
+    <link href="./css/mobile-menu.css" rel="stylesheet">
     <!-- font-awesome -->
-    <link href="../fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
           integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Style CSS -->
-    <link href="../css/style.css" rel="stylesheet">
-    <link rel="icon" href="../img/ikasi_logo.png" type="image/x-icon">
+    <link href="./css/style.css" rel="stylesheet">
+    <link rel="icon" href="./img/ikasi_logo.png" type="image/x-icon">
 
 </head>
 <body>
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html"><img src="../img/logo-nobg.png" alt=""></a>
+            <a class="navbar-brand" href="./index.html"><img src="./img/logo-nobg.png" alt=""></a>
         </div>
 
 
@@ -52,11 +52,11 @@
         <div class="collapse navbar-collapse" id="#navbar-collapse-1">
 
           <ul class="nav navbar-nav navbar-right main-nav">
-              <li ><a href="../index.html">Home</a></li>
-              <li><a href="../about.html">About</a></li>
-              <li><a class="active" href="../services.html">Services</a></li>
-              <li><a href="../contact.html">Contact</a></li>
-              <li><a href="../Blog.html">News</a></li>
+              <li ><a href="./index.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a class="active" href="./services.html">Services</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="./Blog.html">News</a></li>
               <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown"
                       class="dropdown-toggle">Vendors
                       <span><i class="fa fa-angle-down"></i></span></a>
@@ -80,15 +80,15 @@
                                 </ul>
                                 <ul class="col-sm-3">
                                     <li class="dropdown-header">Security</li>
-                                    <li><a href="Kaspersky.html">Kaspersky</a></li>
-                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
+                                    <li><a href="./Products/Sophos.html">Sophos</a></li>
                                     <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
-                                    <li><a href="Veeam.html">Veeam</a></li>
+                                    <li><a href="./Products/Veeam.html">Veeam</a></li>
                                     <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
                                 </ul>
                                 <ul class="col-sm-3">
                                     <li class="dropdown-header">Networking</li>
-                                    <li><a href="Sophos.html">Sophos</a></li>
+                                    <li><a href="./Products/Sophos.html">Sophos</a></li>
                                     <li><a class="popup-link" data-video-id="bHOpHg4WwTMK" href="#">Cisco</a></li>
                                     <li><a class="popup-link" data-video-id="A1qKp5bsGmo" href="#">NetSheild</a></li>
                                     <li><a class="popup-link" data-video-id="uIKE6PCCeS8" href="#">Solar winds</a></li>
@@ -111,14 +111,25 @@
 </nav>
 <!-- .nav -->
 
-<section class="about-text ptb-100">
-    <button><a href="">Request a demo</a></button>
-    <section class="section-title">
-        <div class="Sophos-microsite">
-            <iframe title="sophos-site-box" id="sophos-site-box" src='https://www.sophos.com/en-us/site-in-a-box?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC' frameborder='0'></iframe>    
-        </div>
-    </section>
-</section>
+<section class="partners">
+    <h2>Partners</h2>
+
+    <div class="logos">
+            <a id="topimage" href="./Products/Kaspersky.html"><img src="./img/karspersky product Icons/Asset_1.png" alt="Kaspersky"></a>
+            <a id="topimage" href="./Products/Sophos.html"><img src="./img/logo-client-2.png" alt="Sophos Logo"></a>
+            <a class="popup-link" data-video-id="bHOpHg4WwTMK"href="#"><img src="./img/logo-client-6.png" alt="Cisco"></a> 
+            <a class="popup-link" data-video-id="O74W9BB0gGI" href="#"><img src="./img/logo-client-4.png" alt="CheckPoint"></a>
+            <a class="popup-link" data-video-id="4kuznHDHb5o" href="#"><img src="./img/logo-client-5.png" alt="SYNAQ"></a>
+            <a class="popup-link" data-video-id="A1qKp5bsGmo" href="#"><img src="./img/logo-client-3.png" alt="NetSheild"></a>
+            <a class="popup-link" data-video-id="idHPbgMpdKo" href="#"><img src="./img/dell-tech-Logo.png" alt="Dell technologies"></a>
+            <a href="./Products/Veeam.html"><img src="./img/veeam-logo.png" alt="Veeam"></a>
+            <a class="popup-link" data-video-id="Wporyr3hr68" href="#"><img src="./img/hp_enterrprise.png" alt="HPE"></a>
+            <a class="popup-link" data-video-id="UdQQNiQUzbE" href="#"><img src="./img/Huawei-Logo1-white.png" alt="Huawei"></a>
+            <a class="popup-link" data-video-id="vXj4ufVF42M" href="#"><img src="./img/Vendors/solarwinds-logo.png" alt="Solarwinds"></a>
+            <a class="popup-link" data-video-id="b7ZC01afWPw" href="#"><img src="./img/Vendors/Adobe-Logo.png" alt="Adobe"></a>
+            <a class="popup-link" data-video-id="2W0T2qGZ9Dc" href="#"><img src="./img//Vendors/Microsoft-partner-logo.png" alt=""></a>
+            <a class="popup-link" data-video-id="hpHkLLmkD_o" href="#"><img src="./img/Vendors/manageengine-logo.png" alt=""></a>
+    </div>
 
 <div class="popup-overlay" id="popup-overlay">
   <div class="popup-content">
@@ -128,7 +139,7 @@
   </div>
 </div>
 
-<a href="../contact.html" class="contact-us-icon">
+<a href="./contact.html" class="contact-us-icon">
   <i class='fa fa-comments'></i>
 </a>
 <footer class="footer">
@@ -208,12 +219,13 @@
         <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
           rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
           <ul class="list-inline pull-right">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../about.html">About</a></li>
-              <li class="active"><a href="../services.html">Services</a></li>
-              <li><a href="../Blog.html">News</a></li>
-              <li><a href="../contact.html">Contact</a></li>
-          </ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li class="active"><a href="./Mobileproducts.html">Partners</a></li>
+            <li><a href="./Blog.html">News</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+        </ul>
       </div>
       <!-- .container -->
   </div>
@@ -232,12 +244,12 @@
     <div>
         <div>
             <ul id="menu">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="../services.html">Services</a></li>
-                <li><a href="../Mobileproducts.html">Product</a></li>
-                <li><a href="../Blog.html">News</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Mobileproducts.html">Products</a></li>
+                <li><a href="Blog.html">News</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -247,15 +259,15 @@
 <!-- #main-wrapper -->
 
 <!-- Script -->
-<script src="../js/jquery-2.1.4.min.js"></script>
+<script src="./js/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
-<script src="../js/smoothscroll.js"></script>
-<script src="../js/mobile-menu.js"></script>
-<script src="../js/flexSlider/jquery.flexslider-min.js"></script>
-<script src="../js/scripts.js"></script>
-<script src="../js/popup.js"></script>
+<script src="./js/smoothscroll.js"></script>
+<script src="./js/mobile-menu.js"></script>
+<script src="./js/flexSlider/jquery.flexslider-min.js"></script>
+<script src="./js/scripts.js"></script>
+<script src="./js/popup.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
