--- a/Products/Veeam.html
+++ b/Products/Veeam.html
@@ -159,6 +159,25 @@
     <!-- .content-wrapper -->
 </div>
     <!-- .offcanvas-pusher -->
+     
+    <div class="uc-mobile-menu uc-mobile-menu-effect">
+        <button type="button" class="close" aria-hidden="true" data-toggle="offcanvas"
+                id="uc-mobile-menu-close-btn">&times;</button>
+        <div>
+            <div>
+                <ul id="menu">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../services.html">Services</a></li>
+                    <li><a href="../Mobileproducts.html">Product</a></li>
+                    <li><a href="../Blog.html">News</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- .uc-mobile-menu -->
+    </div>
 
 <!-- Script -->
 <script src="../js/jquery-2.1.4.min.js"></script>
@@ -170,5 +189,7 @@
 <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="../js/scripts.js"></script>
 <script src="../js/popup.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 </body>
 </html>
