--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -623,9 +623,10 @@
               <li><a href="../index.html">Home</a></li>
               <li><a href="../about.html">About</a></li>
               <li><a href="../services.html">Services</a></li>
-              <li><a href="Blog.html">News</a></li>
+              <li><a href="../Mobileproducts.html">Product</a></li>
+              <li><a href="../Blog.html">News</a></li>
               <li><a href="../contact.html">Contact</a></li>
-            </ul>
+          </ul>
           </div>
         </div>
       </div>
@@ -645,5 +646,7 @@
     <script src="../js/flexSlider/jquery.flexslider-min.js"></script>
     <script src="../js/scripts.js"></script>
     <script src="../js/popup.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   </body>
 </html>
