--- a/services.html
+++ b/services.html
@@ -541,12 +541,13 @@
                 <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
                   rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
                   <ul class="list-inline pull-right">
-                      <li><a href="./index.html">Home</a></li>
-                      <li><a href="./about.html">About</a></li>
-                      <li class="active"><a href="./services.html">Services</a></li>
-                      <li><a href="./Blog.html">News</a></li>
-                      <li><a href="./contact.html">Contact</a></li>
-                  </ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li class="active"><a href="./services.html">Services</a></li>
+                    <li><a href="./Mobileproducts.html">Partners</a></li>
+                    <li ><a href="./Blog.html">News</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
               </div>
               <!-- .container -->
           </div>
@@ -571,12 +572,13 @@
         <div>
           <div>
             <ul id="menu">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./about.html">About</a></li>
-              <li><a href="./services.html">Services</a></li>
-              <li><a href="./Blog.html">News</a></li>
-              <li><a href="./contact.html">Contact</a></li>
-            </ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="Mobileproducts.html">Products</a></li>
+              <li><a href="Blog.html">News</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
           </div>
         </div>
       </div>
@@ -615,6 +617,8 @@
     <script src="js/flexSlider/jquery.flexslider-min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/popup.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
