--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -317,7 +317,7 @@
                           </p>
                         </div>
                       </div>
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
                           src="../img/karspersky_Product_Icons/Kaspersky_Endpoint_Security_Cloud.png"
                           alt="KES Cloud"
@@ -340,7 +340,7 @@
                           </p>
                         </div>
                       </div>
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
                           src="../img/karspersky_Product_Icons/Kaspersky_Embedded_Systems_Security.png"
                           alt="Embedded systems Security"
@@ -362,7 +362,7 @@
                         </div>
                       </div>
 
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
                           src="../img/karspersky_Product_Icons/Kaspersky_Industrial_Cybersecurity.png"
                           alt="Industrial Cybersecurity"
@@ -385,9 +385,9 @@
                           </p>
                         </div>
                       </div>
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
-                          style = "height: 35%; width: 35%;"
+                          style = "height: 30%; width: 40%;"
                           src="../img/karspersky_Product_Icons/k_Container_Security_black_icon.svg"
                           alt="Container Security"
                         />
@@ -406,7 +406,7 @@
                           </p>
                         </div>
                       </div>
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
                           src="../img/karspersky_Product_Icons/Kaspersky_Hybrid_Cloud_Security.png"
                           alt="hybrid cloud security"
@@ -427,7 +427,7 @@
                           </p>
                         </div>
                       </div>
-                      <div class="prod-card">
+                      <div class="prod-card" id="kes-icons">
                         <img
                           src="../img/karspersky_Product_Icons/Sandbox.png"
                           alt="sandbox"
