--- a/services.html
+++ b/services.html
@@ -214,8 +214,11 @@
                       </p>
                     </div>
                   </div>
-                  <!-- /.promo-block-wrapper -->
                 </div>
+            </div>
+                
+                <!-- /.promo-block-wrapper -->
+            <div class="row">
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
