--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                     </section>
 
-                    <div class="container">
+                    <div class="container" id="services-container">
 
                         <div class="row">
                             <div class="col-md-6" id="services">
