--- a/about.html
+++ b/about.html
@@ -149,9 +149,9 @@
         </div>
     </section>
     <div class="container">
-        <div style="margin-left: 15%;" class="row">
+        <div style="text-align: center;" class="row">
             <div class="col-md-6 img-left">
-                <img style="height: 30%; width: 60%;" class="img-responsive"
+                <img style="height: 30%; width: 60%; margin: auto;" class="img-responsive"
                     src="./img/Sophos-synchro-award.jpg" alt="Sophos Synchro Award">
                 <div class="promo-content">
                     <h3><br>SOPHOS Synchronisation Award</h3>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="col-md-6 img-left">
-                <img style="height: 30%; width: 60%;" class="img-responsive" src="./img/Sophos-edu-award.jpg"
+                <img style="height: 30%; width: 60%; margin: auto;" class="img-responsive" src="./img/Sophos-edu-award.jpg"
                     alt="Sophos Education Award">
                 <div class="promo-content">
                     <h3><br>SOPHOS Education Award</h3>
