--- a/index.html
+++ b/index.html
@@ -196,10 +196,9 @@
 
                         <div class="row">
                             <div class="col-md-6" id="services">
-
                                 <div class="thumbnail clearfix">
-                                    <a href="services.html"><img class="img-responsive" src="img/communication logo.jpg"
-                                            alt="Image" height = "300px"></a>
+                                    <a href="services.html"><img class="img-responsive" src="img/security-logo.jpg"
+                                            alt="Image"></a>
 
                                     <div class="caption">
                                         <h3><a href="services.html">Cybersecurity</a></h3>
@@ -228,23 +227,10 @@
                         </div>
                         <!-- row -->
                         <div class="row">
-                            <div class="col-md-6">
-                                <div class="thumbnail clearfix">
-                                    <a href="services.html"><img class="img-responsive" src="img/security-logo.jpg" alt="Image"></a>
-
-                                    <div class="caption">
-                                        <h3><a href="services.html">Security</a></h3>
-
-                                        <p>Secure your digital landscape with our Security Solutions. We provide
-                                            comprehensive security services that protect your critical assets from the
-                                            ever-growing threats of the cyber world.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" id="services">
                                 <div class="thumbnail clearfix">
                                     <a href="services.html"><img class="img-responsive" src="img/Networking logo.jpg"
-                                            alt="Image"></a>
+                                            alt="Image" height="310 px;"></a>
 
                                     <div class="caption">
                                         <h3><a href="services.html">Networking infrastructure</a></h3>
@@ -394,17 +380,9 @@
 
                     <div class="copyright-section">
                         <div class="container clearfix">
-                            <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                                rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS Developments</span>
-
-                                <ul class="list-inline pull-right">
-                                    <li class="active" ><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./Mobileproducts.html">Partners</a></li>
-                                    <li><a href="./Blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
-                                </ul>
+                            <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By:
+                                <a rel="noopener" target="_blank" href="https://zukamime03.github.io">LAMPROS
+                                    Developments</span>
                         </div>
                         <!-- .container -->
                     </div>
@@ -473,11 +451,8 @@
     <script src="js/popup.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="./js/responsive.min.js"></script>
 </body>
 
 </html>
